--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 <script src="js/jquery-3.2.1.js"></script>
 <script src="js/scripts.js"></script>
 </head>
-
 <body>
+  <div  align="center" id="intro" >
+    <div id="logo">
+      <img src="/home/june/Documents/mpft-ip/ip2/assets/logoBig.png" id="image-logo">
+    </div>
+</div>
 
 </body>
 </html>
