--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <DOCTYPE! html>
-<html>
-<head>
-  <title></title>
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="css/styles.css" rel="stylesheet" type="text/css">
-<script src="js/jquery-3.2.1.js"></script>
-<script src="js/scripts.js"></script>
-</head>
-<body>
-  <div  align="center" id="intro" >
-    <div id="logo">
-      <img src="/home/june/Documents/mpft-ip/ip2/assets/logoBig.png" id="image-logo">
-    </div>
-</div>
+  <html>
 
-</body>
-</html>
+  <head>
+    <title></title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
+  </head>
+
+  <body>
+    <div align="center" id="intro">
+      <div id="logo">
+        <img src="/home/june/Documents/mpft-ip/ip2/assets/logoBig.png" id="image-logo">
+      </div>
+    </div>
+    <div class="container-fluid" padding: "80px">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="row" id="happy">
+            <h1>Happy Hour</h1>
+          </div>
+          <div class="row" id="party">
+            <h1>Party Time</h1>
+          </div>
+        </div>
+        <div class="col-md-3" id="breakfast">
+          <h1 id="fonth1">Breakfast</h1>
+          </div>
+        <div class="col-md-3" id="lunch">
+          <h1 id="fonth1">Lunch</h1>
+        </div>
+        <div class="col-md-3" id="dinner">
+          <h1 id="fonth1">Dinner</h1>
+        </div>
+      </div>
+    </div>
+
+  </body>
+
+  </html>
