--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid" id="center">
+      <div class="row">
+        <div class="col-md-8" id="fast-food">
+          <div class="row">
+            <img src="/home/june/Documents/mpft-ip/ip2/assets/fastFood1.jpg">
+          </div>
+          <div class="row">
+            <img src="/home/june/Documents/mpft-ip/ip2/assets/fastFood2.jpg" >
+          </div>
+        </div>
+        <div class="col-md-4" id="fastfood2">
+          <h1>Fast Food</h1>
+          <h2>You'll love our delicious food</h2>
+          <p>Lorem ipsum sit amet,consectetur adipisic ing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam,quis nostrud exeercitation uliamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in re prehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariartur.
+          Exce teur sint occaecat cupi datat non proident</p>
+          <a href="#"><button class="buttonbutton1">VIEW GALLERY &#8594;</button></a>
+        </div>
+      </div>
+    </div>
+
+
 
   </body>
 
