add grid system for drinks

--- a/index.html
+++ b/index.html
@@ -57,6 +57,28 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4" id="drinks2">
+          <h1>Drinks</h1>
+          <h2>We also produce delicious drinks</h2>
+          <p>Lorem ipsum dolor sit amet,consecteteur adipisic ing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. DUis aute iture dolor in re prehenderit in voluptate velit esse cillum dolore eu figiat nulla paratur. Exce teur sint occaecat cupi datat non proident</p>
+          <a href="#"><button class="buttonbutton1">VIEW GALLERY &#8594;</button></a>
+        </div>
+        <div class="col-md-8" id="drinks">
+          <div class="row">
+          <div class="col-md-4">
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/drink1.jpg">
+        </div>
+        <div class="col-md-4">
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/drink2.jpg">
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+
 
 
 
