add container for fast foods

--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
   </div>
 </div>
 </div>
+<div class="container-fluid" id="foods">
+  <div id="food2">
+      <div class="container" style="margin-bottom: 50px;">
+        <div class="row">
+          <div class="col-md-3" style="text-align: center; color: #F15A29; background-color: white" >
+            <h2>Fast Food</h2>
+          </div>
+          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center" >
+            <h2>Drinks</h2>
+          </div>
+          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center">
+            <h2>Chicken</h2>
+          </div>
+          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center">
+        <h2>Rice</h2>
+      </div>
+    </div>
+  </div>
+
 
 
 
