--- a/index.html
+++ b/index.html
@@ -95,6 +95,24 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/fastfood/chickenBurger.jpg">
+          <h1 id="h1customers">Chicken Burger</h1>
+        </div>
+        <div class="col-md-4">
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/fastfood/beefBurger.jpg">
+          <h1 id="h1customers">Beef burger</h1>
+        </div>
+        <div class="col-md-4">
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/fastfood/chickenPizza.jpg">
+          <h1 id="h1customers">Chicken pizza</h1>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
 
 
 
