add container for customers and grids

--- a/index.html
+++ b/index.html
@@ -113,6 +113,24 @@
     </div>
 </div>
 </div>
+<div class="menu">
+  <div class="container" id="customers">
+      <div class="row">
+        <div class="col-md-8" style="border-right: 3px solid grey">
+          <h1 id="h1customers">Our Happy Customers</h1>
+          <h2>George Richard</h2>
+          <p>Great food!Menu is awesome,there foods are not only great</p><p> but also in the right price.I'll highly recommend them :)</p>
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/customers/p1.png"><img src="/home/june/Documents/mpft-ip/ip2/assets/customers/p2.png"><img src="/home/june/Documents/mpft-ip/ip2/assets/customers/p3.png">
+          <span class="glyphicon glyphicon-chavron-right"></span>
+        </div>
+
+        <div class="col-md-4" >
+          <h1 id="h1customers">About Menu</h1>
+          <p>We are a little team of 7 members. Ut wisi enim ad minim vwniam,quis nos trudexer ci tation ullamcorper suscipit lob ortis nisl ut aliquip ex ea commodo conse quat. Duisau tem eum iriure dolor in.</p>
+        </div>
+      </div>
+    </div>
+    </div>
 
 
 
