--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
       </div>
     </div>
     </div>
+    <div class="subscribe" align="center">
+      <div class="email_panel">
+        <h3 id="fonth1">Get our daily food items delivered to your email</h3>
+        <form class="form-inline">
+          <div class="form-group">
+            <input type="text" class="form-control" value="Your Email" id="fonth1">
+            <button id="subscribebutton"><h1 id="fonth1">subscribe</h1></button>
+      </div>
+    </form>
+  </div>
+</div>
+
 
 
 
