--- a/index.html
+++ b/index.html
@@ -142,6 +142,21 @@
     </form>
   </div>
 </div>
+<div class="container-fluid" id="footer" align="center">
+        <div class="row">
+          <div class="col-md-12">
+          <h1  id="fonth1"><img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/logo_white.png">MENU</h1>
+
+
+            <h2 id="fonth1">Thats What We Are</h2>
+
+          <img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/facebook.png"> <img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/twitter.png"> <img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/pinterest.png">
+            <div></div>
+            <p id="fonth1">2016 Menu Restaurant</p>
+
+          </div>
+        </div>
+      </div>
 
 
 
