--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div id="logo">
         <img src="/home/june/Documents/mpft-ip/ip2/assets/logoBig.png" id="image-logo">
       </div>
+      <h1 id="fonth1">We Provide The Best Food</h1> <h1 id="fonth1">At The <strong>Right Price</strong> </h1>
     </div>
     <div class="container-fluid" padding: "80px">
       <div class="row">
