--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
   <body>
     <div align="center" id="intro">
+      <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="color:white">&times;</a>
+      <div class="overlay-content">
+      <a href="#">Contacts</a>
+      <a href="#">Events</a>
+      <a href="#">Menu</a>
+    </div>
+  </div>
+  <div>
+<span style="font-size:60px;cursor:pointer" onclick="openNav()" color:"white">&#9776; </span>
+</div>
       <div id="logo">
         <img src="/home/june/Documents/mpft-ip/ip2/assets/logoBig.png" id="image-logo">
       </div>
