--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="center2">
       <div class="row">
         <div class="col-md-4" id="drinks2">
           <h1>Drinks</h1>
@@ -147,7 +147,7 @@
       <div class="email_panel">
         <h3 id="fonth1">Get our daily food items delivered to your email</h3>
         <form class="form-inline">
-          <div class="form-group">
+          <div class="form-grou                         p">
             <input type="text" class="form-control" value="Your Email" id="fonth1">
             <button id="subscribebutton"><h1 id="fonth1">subscribe</h1></button>
       </div>
@@ -169,15 +169,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-  </body>
+    </body>
 
   </html>
