--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
   <body>
@@ -20,34 +21,35 @@
     </div>
   </div>
   <div>
-<span style="font-size:60px;cursor:pointer" onclick="openNav()" color:"white">&#9776; </span>
+<span style="font-size:60px;cursor:pointer" onclick="openNav()" color="white">&#9776; </span>
 </div>
       <div id="logo">
         <img src="/home/june/Documents/mpft-ip/ip2/assets/logoBig.png" id="image-logo">
       </div>
       <h1 id="fonth1">We Provide The Best Food</h1> <h1 id="fonth1">At The <strong>Right Price</strong> </h1>
     </div>
-    <div class="container-fluid" padding: "80px">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="row" id="happy">
-            <h1>Happy Hour</h1>
-          </div>
-          <div class="row" id="party">
-            <h1>Party Time</h1>
-          </div>
+    <div class="container-fluid" padding:"80px" >
+    <div class="row">
+      <div class="col-md-3">
+        <div class="row" id="happy">
+          <h1>Happy Hour</h1>
         </div>
-        <div class="col-md-3" id="breakfast">
-          <h1 id="fonth1">Breakfast</h1>
-          </div>
-        <div class="col-md-3" id="lunch">
-          <h1 id="fonth1">Lunch</h1>
-        </div>
-        <div class="col-md-3" id="dinner">
-          <h1 id="fonth1">Dinner</h1>
+        <div class="row"  id="party">
+          <h1 >Party Time</h1>
         </div>
       </div>
+      <div class="col-md-3" id="breakfast">
+        <h1 id="fonth1">Breakfast</h1>
+      </div>
+      <div class="col-md-3" id="lunch">
+        <h1 id="fonth1">Lunch</h1>
+      </div>
+      <div class="col-md-3" id="dinner">
+        <h1 id="fonth1">Dinner</h1>
+      </div>
+      </div>
     </div>
+
     <div class="container-fluid" id="center">
       <div class="row">
         <div class="col-md-8" id="fast-food">
@@ -89,17 +91,18 @@
   </div>
 </div>
 </div>
+
 <div class="container-fluid" id="foods">
   <div id="food2">
       <div class="container" style="margin-bottom: 50px;">
-        <div class="row">
-          <div class="col-md-3" style="text-align: center; color: #F15A29; background-color: white" >
+        <div class="row" >
+          <div class="col-md-3" style="text-align: center; color: #F15A29; background-color: white; border-right: 3px solid grey; ">
             <h2>Fast Food</h2>
           </div>
-          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center" >
+          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center; border-right: 3px solid grey;" >
             <h2>Drinks</h2>
           </div>
-          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center">
+          <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center; border-right: 3px solid grey;">
             <h2>Chicken</h2>
           </div>
           <div class="col-md-3" style="color: black; background-color: lightgrey; text-align: center">
@@ -164,7 +167,7 @@
 
           <img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/facebook.png"> <img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/twitter.png"> <img src="/home/june/Documents/mpft-ip/ip2/assets/footerlogos/pinterest.png">
             <div></div>
-            <p id="fonth1">2016 Menu Restaurant</p>
+            <footer id="fonth1">2016 Menu Restaurant</footer>
 
           </div>
         </div>
