change margin for happy

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       </div>
       <h1 id="fonth1">We Provide The Best Food</h1> <h1 id="fonth1">At The <strong>Right Price</strong> </h1>
     </div>
-    <div class="container-fluid" padding:"80px" >
-    <div class="row">
-      <div class="col-md-3">
-        <div class="row" id="happy">
-          <h1>Happy Hour</h1>
-        </div>
+    <div class="container-fluid"  >
+      <div class="row">
+        <div class="col-md-3">
+          <div class="row" id="happy">
+            <h1>Happy Hour</h1>
+          </div>
         <div class="row"  id="party">
           <h1 >Party Time</h1>
         </div>
       </div>
       <div class="col-md-3" id="breakfast">
         <h1 id="fonth1">Breakfast</h1>
-      </div>
+        </div>
       <div class="col-md-3" id="lunch">
         <h1 id="fonth1">Lunch</h1>
-      </div>
+        </div>
       <div class="col-md-3" id="dinner">
         <h1 id="fonth1">Dinner</h1>
       </div>
@@ -95,7 +95,7 @@
 <div class="container-fluid" id="foods">
   <div id="food2">
       <div class="container" style="margin-bottom: 50px;">
-        <div class="row" >
+        <div class="rowfood">
           <div class="col-md-3" style="text-align: center; color: #F15A29; background-color: white; border-right: 3px solid grey; ">
             <h2>Fast Food</h2>
           </div>
