--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
   <html>
 
   <head>
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/home/june/Documents/anitas-kitchen/js/jquery-3.2.1 .js"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
